# ocr

./: .gitignore  CaptureOverlay.py  README.md  main.py  mainwindow.py  old requirements.txt  pyproject.toml  requirements.txt  setup.cfg
component/: CaptureOverlay.py  mainwindow.py  menu.py  toolbar.py
constant/: constant.py
screenshot/: __init__.py  main.py  permissions.py
screenshot/handlers/: dbus_portal.py  gnome_screenshot.py  grim.py  qt.py  spectacle.py
system/: info.py
utils/: translator.py  utils.py  worker.py
