[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga_ocr_gui"
version = "0.1.0"
description = "Simple PySide6 GUI for capturing screenshots and running OCR/translation"
readme = "README.md"
authors = [
  { name = "Pandu Rama Satria Putranata" }
]
requires-python = ">=3.9"
dependencies = [
  "deep_translator==1.11.4",
  "manga_ocr==0.1.14",
  "Pillow==11.2.1",
  "pyside6==6.10.0",
  "pyside6_addons==6.10.0",
  "pyside6_essentials==6.10.0",
  "pytesseract==0.3.13",
  "furigana @ git+https://github.com/Tawaraya13/furigana.git"
]

[tool.setuptools]
packages = ["screenshot","system"]

[project.scripts]
manga-ocr-gui = "Manga_OCR_GUI.main:main"