[metadata]
name = manga-ocr-gui
version = 0.1.0
description = Simple PySide6 GUI for capturing screenshots and running OCR/translation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    -r requirements.txt
python_requires = >=3.11
